7. Added a function for updating the Object level variables of Guide ID and Guide Version.
8. Added a call to the function for updating the Object Level varibles in when the guide is started.
9. Added a Variabled to hold the ReplayCode box 
10. Added a function to update the Replay input box with the Replay code for the current Guide.
11. updated the remove function to Clear out the Replay box when the last Guide Lelment is Removed. 
12. Added a variable to Hold the Replay code.
13. Add a retune to display the Replay code at when an end Node is Hit. 

2014-04-27:
1. Add and tested a function to Make Divs (Next Step is to go Back through all code and have all Divs Made this way
    and store their them in Object level variables. In this process I will be finding all User displayed Text and 
    changing that to be linked to object level varables. 

2014-04-30:
1. Updated make_guide_display to have all Divs Made with the Make Div function. 
2. New variables added to help with standarization for make_guide_display.
3. All user Displaied Text in make_guide_display is hosted in a Variable. 

2014-05-01:
1.Updated CSS to make guide more readable. 

2014-05-04:
1. Finished updating all Functions to make all Divs with MakeDiv.
2. Normailed CSS names. 
3. Updated the Click even handler to Process the target into an HTML object of the target.
4. Updated the even function for asnwer to accept the an HTML object of the target.

2014-05-05:
1. Add Configurable variables for the User errors realated to invalied input.
2. Added an Object that holds the Parsed Replay Guide input.
3. Added a Function to parse Guide input.
4. Added function to look at the Replay input and parse the data. The Load the Guide by found Guide Name.
5. Added a case for Loading the XML from the with the Replay code. 

2014-05-06:
1. Made new Road Map with Template.
2. Variable to hold Usermessages: Guide version (Both can't go on an warning).
3. Variable to hold Usermessage: Guide Path Not valid.